Fix blockquote styling: double quotes for all levels, fix line spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -287,16 +287,16 @@ header .site-title {
   border-left: 10px solid #ccc;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
-  quotes: "\201C""\201D""\2018""\2019";
+  quotes: "\201C""\201D""\201C""\201D";
 }
 
 .post blockquote:before {
   color: #ccc;
   content: open-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-right: 0.25em;
-  vertical-align: -0.4em;
+  font-size: 3em;
+  line-height: 0;
+  margin-right: 0.15em;
+  vertical-align: -0.35em;
 }
 
 .post blockquote p {
